# saint_lucia_election

./: .gitignore  README.md  analyze_bellwether_constituencies.py  analyze_micoud_north_swing.py  competitative_areas_analysis.py  create_constituency_swing_chart.py  create_swing_analysis_charts.py  generate_swing_thresholds.py  main.py  pyproject.toml  run.sh  scrape_constituency_map.py  scrape_historical_election_night_results.py  swing_utils.py
data/: bellwether_analysis.json
data/constituency_maps/: saint_lucia_constituencies.json
data/election_night_results/: st_lucia_2011_full_results.json  st_lucia_2016_full_results.json  st_lucia_2021_full_results.json
data/live_election_results/: results_2025-12-01_18-02-18.json  results_2025-12-01_18-06-41.json  results_2025-12-01_18-12-01.json  results_2025-12-01_18-17-19.json  results_2025-12-01_18-22-37.json  results_2025-12-01_18-27-54.json  results_2025-12-01_18-33-12.json  results_2025-12-01_18-38-29.json  results_2025-12-01_18-43-47.json  results_2025-12-01_19-05-47.json  results_2025-12-01_19-11-08.json  results_2025-12-01_19-16-36.json  (+38 more)
election_night_monitoring/: ELECTION_NIGHT_TRACKER.md  README.md  __init__.py  alerts.py  data_reconciler.py  generate_swing_charts.py  monitor_live_swings.py  orchestrator.py  scrape_granular_results.py  scrape_live_results.py  scrape_results_slu.py  test_backtest.py  turnout_model.py
saint_lucia_election.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scrapers/: scrape_constituency_map.py  scrape_election_summary_results.py  scrape_historical_election_night_results.py
(+240 files in other folders)
