[project]
name = "saint-lucia-election"
version = "0.1.0"
description = "Historical analysis of Saint Lucia elections with predictions for the 2025 election"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]
